feat: cicd/Jenkins 기본 글 작성
- 컨트롤러·에이전트 아키텍처, Folders 네임스페이스
- 에이전트 연결 4종: SSH·Inbound·WebSocket·K8s + Agent Protocol 주의
- JCasC 점진 도입, 시크릿 주입 패턴
- 인증/인가: OIDC·LDAP·Role-Based Strategy·Script Console/CLI 보안
- Vault OIDC Provider로 장기 토큰 제거
- HA(CloudBees A/A), 백업+복구 리허설, ThinBackup
- Prometheus·Audit Trail + SIEM
- JVM 튜닝(MaxRAMPercentage/G1GC), Pipeline Durability
- Java 21/25 전환 로드맵

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>